<?xml version="1.0"?>
<package>
  <name>rospy_fixed_len_bug</name>
  <version>0.0.0</version>
  <description>The rospy_fixed_len_bug package</description>

  <maintainer email="trainman419@todo.todo">trainman419</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
